# EffekseerNativeForJava

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  EffekseerBackendCore.cpp  EffekseerCore.i  EffekseerManagerCore.cpp
